# Astro-AI

./: .gitignore  README.md  agents.py  auth.db  data_loader.py  inngest.json  jobs.json  main.py  pyproject.toml  streamlit_app.py  test_graph.py  test_pipeline.py  test_post.py  test_query.py  test_routes.py  vector_db.py
app/: main.py
app/agent/: graph.py
app/core/: auth.py  db.py  security.py
app/models/: graph.py
app/services/: data_loader.py  graph_analytics.py  graph_extractor.py  quiz_generator.py  vector_db.py
frontend/: index.html  package-lock.json  package.json  streamlit_app.py
frontend/src/: App.tsx  App_8c34870.tsx.txt  App_8c34870_utf8.txt  BlurText.tsx  FeaturesSection.tsx  GraphView.tsx  Landing.tsx  Login.tsx  MindMapView.tsx  features.css  index.css  index_8c34870.css.txt  index_8c34870_utf8.css
tests/: test_graph.py  test_inngest.py  test_routes.py
