[project]
name = "ai-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "inngest>=0.5.18",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "networkx>=3.6.1",
    "openai>=2.41.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
